# Hybrid-Photorealistic-Toon-Shader

./: Benchmark.txt  CMakeLists.txt  imgui.ini
assets/models/: desktop.ini
assets/shaders/: composite.frag  cube_shadow.frag  cube_shadow.vert  edge_detection.frag  geometry.frag  geometry.vert  point_shadow.frag  point_shadow.geom  shadow_map.frag  shadow_map.vert
assets/shaders/lighting/: hybrid_cel_lighting.frag
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/lighting/: Light.h  LightManager.cpp  LightManager.h
src/renderer/: GBuffer.cpp  GBuffer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/ui/: GUI.cpp  GUI.h
src/utils/: JsonHelpers.h
